--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "barryvdh/laravel-debugbar": "^2.0",
         "barryvdh/laravel-ide-helper": "^2.1",
         "pingpong/widget" : "~2.0",
-        "doctrine/dbal": "~2.3"
+        "doctrine/dbal": "~2.3",
+        "intervention/image": "^2.3",
+        "barryvdh/laravel-elfinder": "^0.3.4"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
@@ -42,6 +44,7 @@
             "php artisan clear-compiled"
         ],
         "post-update-cmd": [
+            "php artisan elfinder:publish",
             "php artisan optimize"
         ],
         "post-root-package-install": [
