fix: Добавление в .gitignore config.js (tinyMCE)

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ public/assets/img/slider/*/**
 .idea
 
 .bowerrc
+
+public/assets/plugins/adminlte/plugins/ckeditor/config.js
+resources/assets/bower_components/adminlte/plugins/ckeditor/config.js
