Модуль "Каталог товаров".

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ public/assets/img/certificates/*
 public/assets/img/galleries/*
 public/assets/img/slider/*
 public/assets/img/slider/*/**
+public/assets/img/products/*
 
 .idea
 
