Модуль "Каталог товаров".

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ public/assets/img/galleries/*
 public/assets/img/slider/*
 public/assets/img/slider/*/**
 public/assets/img/products/*
+public/assets/price-list/*
 
 .idea
 
