feature: возможность оформления заявки на покупку (кнопка "Купить" + форма).

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,6 @@ QUEUE_DRIVER=sync
 MAIL_DRIVER=smtp
 MAIL_HOST=mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_USERNAME=69a353efe26b2e
+MAIL_PASSWORD=9b65ef3c473e8d
 MAIL_ENCRYPTION=null
